--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/config/home-bg.jpg
 email: shenbaoone@gmail.com
 description: " | 这里是 @ShenBao 沈宝 的个人博客，与你一起发现更大的世界。"
 keyword: "沈宝, ShenBao,秋思浪人,, @shenbao, 沈宝的博客, ShenBao Blog, 博客, 个人网站, 互联网, 前端"
-url: ""              # your host, for absolute URL
+url: "https://shenbao.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
