--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: no # true                          # if you want to customize anchor. check out line:181 of `post.html`  文章中标题前面的 # 符号
-timezone: CN                                # 时间设置
+# timezone: CN                                # 时间设置
 
 
 # Gems
