--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,8 @@ featured-condition-size: 0              # A tag will be featured if the size of 
 chrome-tab-theme-color: "#000000"
 service-worker: true
 
-# Extend
-extend: [
+# Extends
+extends: [
     {
         title: "原博客",
         href: "https://shenbao.github.io/blog"
