--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,10 @@ featured-condition-size: 0              # A tag will be featured if the size of 
 chrome-tab-theme-color: "#000000"
 service-worker: true
 
-# Extends
-extends: [
+
+
+# Friends
+friends: [
     {
         title: "原博客",
         href: "https://shenbao.github.io/blog"
@@ -100,19 +102,10 @@ extends: [
     {
         title: "React技术栈",
         href: "https://shenbao.github.io/ishehui"
-    }
+    },
+    # {
+    #     title: "前端外刊评论",
+    #     href: "http://qianduan.guru/"
+    # },
     
 ]
-
-# # Friends
-# friends: [
-#     {
-#         title: "原博客",
-#         href: "https://shenbao.github.io/blog"
-#     },
-#     {
-#         title: "React技术栈",
-#         href: "https://shenbao.github.io/ishehui"
-#     }
-    
-# ]
