add extends in post.html page.html

--- a/_config.yml
+++ b/_config.yml
@@ -94,21 +94,16 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "原博客",
-        href: "https://shenbao.github.io/blog"
-    },
-    {
-        title: "React技术栈",
-        href: "https://shenbao.github.io/ishehui"
-    },
-    # {
-    #     title: "前端外刊评论",
-    #     href: "http://qianduan.guru/"
-    # },
-    
-]
+# friends: [
+#     {
+#         title: "原博客",
+#         href: "https://shenbao.github.io/blog"
+#     },
+#     {
+#         title: "React技术栈",
+#         href: "https://shenbao.github.io/ishehui"
+#     }
+# ]
 
 
 # Extends
