add 2016-02-12-JavaScripts Basic.md 2016-02-14-JavaScripts types.md

--- a/_config.yml
+++ b/_config.yml
@@ -94,26 +94,26 @@ service-worker: true
 
 
 # Friends
-# friends: [
-#     {
-#         title: "原博客",
-#         href: "https://shenbao.github.io/blog"
-#     },
-#     {
-#         title: "React技术栈",
-#         href: "https://shenbao.github.io/ishehui"
-#     }
-# ]
+friends: [
+    # {
+    #     title: "原博客",
+    #     href: "https://shenbao.github.io/blog"
+    # },
+    # {
+    #     title: "React技术栈",
+    #     href: "https://shenbao.github.io/ishehui"
+    # }
+]
 
 
 # Extends
 extends: [
-    {
-        title: "原博客",
-        href: "https://shenbao.github.io/blog"
-    },
-    {
-        title: "React技术栈",
-        href: "https://shenbao.github.io/ishehui"
-    }
+    # {
+    #     title: "原博客",
+    #     href: "https://shenbao.github.io/blog"
+    # },
+    # {
+    #     title: "React技术栈",
+    #     href: "https://shenbao.github.io/ishehui"
+    # }
 ]
