--- a/_config.yml
+++ b/_config.yml
@@ -107,13 +107,13 @@ service-worker: true
 
 
 # Extends
-# extends: [
-#     {
-#         title: "原博客",
-#         href: "https://shenbao.github.io/blog"
-#     },
-#     {
-#         title: "React技术栈",
-#         href: "https://shenbao.github.io/ishehui"
-#     }
-# ]
+extends: [
+    {
+        title: "技术文档",
+        href: "https://shenbao.github.io/blog"
+    },
+    # {
+    #     title: "React技术栈",
+    #     href: "https://shenbao.github.io/ishehui"
+    # }
+]
