--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: ShenBao Blog
-SEOTitle: 沈宝的博客 | ShenBao Blog | 秋思浪人的博客 | QiuSiLangRen Blog
+SEOTitle: 沈宝的博客 | ShenBao Blog | 小宝的博客 XiaoBao Blog| 秋思浪人的博客 | QiuSiLangRen Blog 
 header-img: img/config/home-bg.jpg
 email: shenbaoone@gmail.com
 description: " | 这里是 @ShenBao 沈宝 的个人博客，与你一起发现更大的世界。"
-keyword: "沈宝, ShenBao, @shenbao,沈宝的博客,秋思浪人,QiusiLangren，秋思浪人的博客,  ShenBao Blog, 博客, 个人网站, 互联网, 前端，web developer"
+keyword: "沈宝, ShenBao,小宝,XiaoBao,@ShenBao,@XiaoBao,沈宝的博客,秋思浪人,QiusiLangren，秋思浪人的博客,  ShenBao Blog, 博客, 个人网站, 互联网, 前端，web developer"
 url: "https://shenbao.github.io"              # your host, for absolute URL
 createTime: '2015'
 
