--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: ShenBao Blog
 SEOTitle: 沈宝的博客 | ShenBao Blog | 小宝的博客 | XiaoBao Blog| 秋思浪人的博客 | QiuSiLangRen Blog 
 header-img: img/config/home-bg.jpg
 email: shenbaoone@gmail.com
-description: " | 这里是 @ShenBao 沈宝 的个人博客，与你一起发现更大的世界。少抱怨，多思考，未来更美好！！！"
-keyword: "沈宝, ShenBao,小宝,XiaoBao,@ShenBao,@XiaoBao,沈宝的博客,秋思浪人,QiusiLangren，秋思浪人的博客,  ShenBao Blog, 博客, 个人网站, 互联网, 前端，web developer"
+description: " | 这里是沈宝的个人博客，与你一起发现更大的世界。少抱怨，多思考，未来更美好！！！"
+keyword: "沈宝, ShenBao,小宝,XiaoBao，@沈宝,@小宝,@ShenBao,@XiaoBao,沈宝的博客,秋思浪人,QiusiLangren，秋思浪人的博客,  ShenBao Blog, 博客, 个人网站, 互联网, 前端，web developer,JavaScript,Js,ES6,React,React Native,Git,Gulp,WebPack,Fis3"
 url: "https://shenbao.github.io"              # your host, for absolute URL
 createTime: '2015'
 
