--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: ShenBao Blog
-SEOTitle: 沈宝的博客 | ShenBao Blog | 小宝的博客 | XiaoBao Blog| 秋思浪人的博客 | QiuSiLangRen Blog 
+SEOTitle: 沈宝的博客 | ShenBao Blog | 小宝的博客 | XiaoBao Blog| | 宝宝的博客 | BaoBao Blog | 秋思浪人的博客 | QiuSiLangRen Blog 
 header-img: img/config/home-bg.jpg
 email: shenbaoone@gmail.com
 description: " | 这里是沈宝的个人博客，与你一起发现更大的世界。少抱怨，多思考，未来更美好！！！"
