--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.#添加侧边栏
 sidebar-about-description: "少抱怨，多思考，<br>未来更美好！！" # 简单的描述一下你自己
-sidebar-avatar: /img/config/shenbao.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`你的大头贴，请使用绝对地址
+sidebar-avatar: /img/config/my-head.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`你的大头贴，请使用绝对地址
 
 
 
