--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ about_path: about
 
 # SNS settings
 RSS: false
-weibo_username:  
+weibo_username:  ShenBaoPro
 zhihu_username:  shenbao
 github_username: ShenBao
 #twitter_username:  
