--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: ShenBao Blog
 SEOTitle: 沈宝的博客 | ShenBao Blog
 header-img: img/config/home-bg.jpg
 email: shenbaoone@gmail.com
-description: " | 这里是沈宝的个人博客，与你一起发现更大的世界。少抱怨，多思考，未来更美好！！！"
+description: " | 这里是沈宝(@ShenBao)的个人博客，与你一起发现更大的世界。少抱怨，多思考，未来更美好！！！"
 
 keyword: "shenbaoone@gmail.com, 沈宝, ShenBao,小宝,XiaoBao，知秋，@沈宝,@小宝,@ShenBao,@XiaoBao,@知秋，沈宝的博客,秋思浪人,QiusiLangren，秋思浪人的博客,ShenBao Blog,知秋的博客， 博客, 个人网站, 互联网, 前端，web developer,JavaScript,Js,ES5,ES6,React,Redux,React Native,SVN,Git,Gulp,WebPack,Fis3."
 
